--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <html>
 <head>
-<title>
-привет
-</title>
+<title></title>
 </head>
 <body>
-ДОБРЫЙ ДЕНЬ
-
+<img src="Q2YSSuMx6vQ.jpg" width="1080" height="1812" alt="" />
 </body>
 </html>
